make a rectangle  or jab mouse center par ho to rectangle bhi center par jaye  or jab mouse left par jaye to rectange bhi left par jaye     jab mouse center se left mai jaye to rectangle ki speed slow ho jaye slow slow     same right ke sath bhi ho

--- a/2js/index.html
+++ b/2js/index.html
@@ -8,5 +8,17 @@
 </head>
 <body>
     
+   <div id="react">
+
+   </div>
+
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
+    integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg==" 
+   crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="index.js"></script>
 </body>
 </html>
+
+<!-- make a rectangle  or jab mouse center par ho to rectangle bhi center par jaye  or jab mouse left par jaye to rectange bhi left par jaye 
+    jab mouse center se left mai jaye to rectangle ki speed slow ho jaye slow slow 
+    same right ke sath bhi ho  -->
