--- a/3js/index.html
+++ b/3js/index.html
@@ -7,9 +7,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div id="center"></div>
 
+
+    
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
+   integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg==" 
+  crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="index.js"> </script>
 </body>
 </html>
-<!-- ek div banao  -->
+<!-- ek div banao f5 -->
